修改应用仅支持 iOS 10 版本, 更改通知方式

--- a/Lucuber/ViewControllers/FormulaDetail/FormulaDetail.storyboard
+++ b/Lucuber/ViewControllers/FormulaDetail/FormulaDetail.storyboard
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Nc2-BK-DNv">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1217" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Nc2-BK-DNv">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -23,6 +24,12 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="yGe-mb-WbW">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <view key="tableHeaderView" contentMode="scaleToFill" id="HIz-ZT-YFc" customClass="DetailHeaderView" customModule="Lucuber" customModuleProvider="target">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </view>
+                                <sections/>
                                 <connections>
                                     <outlet property="dataSource" destination="Nc2-BK-DNv" id="a2m-DW-uPX"/>
                                     <outlet property="delegate" destination="Nc2-BK-DNv" id="Jpk-8R-Gng"/>
@@ -38,6 +45,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="headerView" destination="HIz-ZT-YFc" id="XaP-wS-tbE"/>
                         <outlet property="tableView" destination="yGe-mb-WbW" id="EJd-ob-AZ3"/>
                         <segue destination="uzE-JB-UEH" kind="show" identifier="showCommentVC" id="Qdb-fx-bc6"/>
                     </connections>
